优化图片体积

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js" ></script>
 		<script type="text/javascript" src="js/tween.js" ></script>
-		<script type="text/javascript" src="js/three.js" ></script>
+		<script type="text/javascript" src="js/three.min.js" ></script>
 		<script type="text/javascript" src="js/OrbitControls.js" ></script>
 		<script type="text/javascript" src="js/ylz_engine.js" ></script>
 		<style>
