重力感应测试

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="js/tween.js" ></script>
 		<script type="text/javascript" src="js/three.min.js" ></script>
 		<script type="text/javascript" src="js/OrbitControls.js" ></script>
+		<script type="text/javascript" src="js/DeviceOrientationControls.js"></script>
 		<script type="text/javascript" src="js/ylz_engine.js" ></script>
 		<style>
 			html, body {
@@ -18,7 +19,7 @@
 		</style>
 
 	</head>
-	<body>
+	<body>sdfsdf
 		<!--<div id="container" style="width: 500px; height: 500px;"></div>-->
 		<script type="text/javascript" src="js/main.js" ></script>
 	</body>
