--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</style>
 
 	</head>
-	<body>sdfsdf
+	<body>
 		<!--<div id="container" style="width: 500px; height: 500px;"></div>-->
 		<script type="text/javascript" src="js/main.js" ></script>
 	</body>
