--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="MobileOptimized" content="640"/>
     <meta name="format-detection" content="telephone=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>奇迹时刻</title>
     <link rel="stylesheet" type="text/css" href="css/index.css"></link>
 </head>
@@ -15,8 +18,8 @@
 <div id="music" class="on"></div>
 
 <div id="homePage" class="page" style="display: block">
-    <img src="img/homebg.jpg" class="bg"/>
-    <input class="one" type="image" src="img/start.png" name="go" value="点击开始"/>
+    <img src="img/homebg.webp" class="bg"/>
+    <input class="one" type="image" src="img/start.webp" name="go" value="点击开始"/>
 </div>
 <div id="3dPage"></div>
 
@@ -27,17 +30,17 @@
             是反应灵敏和自发主动的一种人，喜欢凭感觉做事，缺乏一定的科学理论知识，往往猜中了开头，猜不中结果。不过别灰心，通过后天的努力可以提高自己的“科学商”幸运的是你和高晓攀是一个类型的#科学商#。
         </li>
     </ul>
-    <img src="img/resultbg.jpg" class="bg"/>
+    <img src="img/resultbg.webp" class="bg"/>
     <div class="result-rect"></div>
-    <input class="two" type="image" src="img/sharebtn.png"/>
-    <input class="two2" type="image" src="img/play-again.png"/>
+    <input class="two" type="image" src="img/sharebtn.webp"/>
+    <input class="two2" type="image" src="img/play-again.webp"/>
 </div>
 
 <div id="sexPage" class="page">
-    <img src="img/sex-bg.png" class="bg"/>
+    <img src="img/sex-bg.webp" class="bg"/>
     <input class="one_three" type="radio" value="men" checked="checked" name="sex"/>
     <input class="two_three" type="radio" checked="checked" value="women" name="sex"/>
-    <input class="one1_three" type="image" src="img/confirm.png" value="确认"/>
+    <input class="one1_three" type="image" src="img/confirm.webp" value="确认"/>
 </div>
 
 <div id="psPage" class="page">
@@ -48,19 +51,19 @@
     <img id="ps-bg" class="bg"/>
     <img id="avatar-ps"/>
     <div class="star">
-        <img src="img/photo/gxp.png"/>
+        <img src="img/photo/gxp.webp"/>
     </div>
     <span>啊死就卡的很看撒谎打开和撒旦</span>
-    <input class="one_four" type="image" src="img/crate.png" value="生成"/>
-    <input class="two_four" type="image" src="img/upload.png" value="上传"/>
+    <input class="one_four" type="image" src="img/crate.webp" value="生成"/>
+    <input class="two_four" type="image" src="img/upload.webp" value="上传"/>
 </div>
 
 <div id="uploadPage" class="page">
-    <img src="img/uploadbg.jpg" class="bg"/>
+    <img src="img/uploadbg.webp" class="bg"/>
     <div id="clipArea"></div>
     <input id="uploadFile" type="file" name="image" accept="image/*" style="display: none">
-    <input class="noe_five hide" type="image" src="img/selectphoto.png" value="选择照片"/>
-    <input class="two_five hide" type="image" src="img/confirmup.png" value="确定上传"/>
+    <input class="noe_five hide" type="image" src="img/selectphoto.webp" value="选择照片"/>
+    <input class="two_five hide" type="image" src="img/confirmup.webp" value="确定上传"/>
 </div>
 
 <div id="sharePage" class="page">
@@ -71,12 +74,12 @@
     <img class="bg"/>
     <img id="share-face"/>
     <div class="star2">
-        <img src="img/photo/gxp.png"/>
+        <img src="img/photo/gxp.webp"/>
     </div>
     <div class="share-rect"></div>
-    <input class="one_sven hide" type="image" src="img/button2  4.png"/>
-    <input class="two_sven hide" type="image" src="img/button2  5.png"/>
-    <img id="share-mask" src="img/share-wx.png" class="mask"/>
+    <input class="one_sven hide" type="image" src="img/button2  4.webp"/>
+    <input class="two_sven hide" type="image" src="img/button2  5.webp"/>
+    <img id="share-mask" src="img/share-wx.webp" class="mask"/>
 </div>
 
 <script type="text/javascript" src="js/data.js"></script>
