--- a/video.html
+++ b/video.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>摄像头拍照</title>
+</head>
+<body>
+  <video id="video" width="480" height="320" controls>
+  </video>
+  <div>
+    <button id="capture">拍照</button>
+  </div>
+  <canvas id="canvas" width="480" height="320"></canvas>
+  <script>
+    //访问用户媒体设备的兼容方法
+    function getUserMedia(constraints, success, error) {
+      if (navigator.mediaDevices.getUserMedia) {
+        //最新的标准API
+        navigator.mediaDevices.getUserMedia(constraints).then(success).catch(error);
+      } else if (navigator.webkitGetUserMedia) {
+        //webkit核心浏览器
+        navigator.webkitGetUserMedia(constraints,success, error)
+      } else if (navigator.mozGetUserMedia) {
+        //firfox浏览器
+        navigator.mozGetUserMedia(constraints, success, error);
+      } else if (navigator.getUserMedia) {
+        //旧版API
+        navigator.getUserMedia(constraints, success, error);
+      }
+    }
 
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
+    let video = document.getElementById('video');
+    let canvas = document.getElementById('canvas');
+    let context = canvas.getContext('2d');
 
-	<body>
-		<script>
-			if(navigator.mediaDevices === undefined) {
-				navigator.mediaDevices = {};
-			}
+    function success(stream) {
+      //兼容webkit核心浏览器
+      let CompatibleURL = window.URL || window.webkitURL;
+      //将视频流设置为video元素的源
+      console.log(stream);
 
-			// 一些浏览器部分支持 mediaDevices。我们不能直接给对象设置 getUserMedia 
-			// 因为这样可能会覆盖已有的属性。这里我们只会在没有getUserMedia属性的时候添加它。
-			if(navigator.mediaDevices.getUserMedia === undefined) {
-				navigator.mediaDevices.getUserMedia = function(constraints) {
+      //video.src = CompatibleURL.createObjectURL(stream);
+      video.srcObject = stream;
+      video.play();
+    }
 
-					// 首先，如果有getUserMedia的话，就获得它
-					var getUserMedia = navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
+    function error(error) {
+      console.log(`访问用户媒体设备失败${error.name}, ${error.message}`);
+    }
 
-					// 一些浏览器根本没实现它 - 那么就返回一个error到promise的reject来保持一个统一的接口
-					if(!getUserMedia) {
-						return Promise.reject(new Error('getUserMedia is not implemented in this browser'));
-					}
+    if (navigator.mediaDevices.getUserMedia || navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia) {
+      //调用用户媒体设备, 访问摄像头
+      getUserMedia({video : {width: 480, height: 320}}, success, error);
+    } else {
+      alert('不支持访问用户媒体');
+    }
 
-					// 否则，为老的navigator.getUserMedia方法包裹一个Promise
-					return new Promise(function(resolve, reject) {
-						getUserMedia.call(navigator, constraints, resolve, reject);
-					});
-				}
-			}
-
-			navigator.mediaDevices.getUserMedia({
-					audio: true,
-					video: true
-				})
-				.then(function(stream) {
-					var video = document.querySelector('video');
-					// 旧的浏览器可能没有srcObject
-					if("srcObject" in video) {
-						video.srcObject = stream;
-					} else {
-						// 防止再新的浏览器里使用它，应为它已经不再支持了
-						video.src = window.URL.createObjectURL(stream);
-					}
-					video.onloadedmetadata = function(e) {
-						video.play();
-					};
-				})
-				.catch(function(err) {
-					console.log(err.name + ": " + err.message);
-				});
-		</script>
-	</body>
-
+    document.getElementById('capture').addEventListener('click', function () {
+      context.drawImage(video, 0, 0, 480, 320);      
+    })
+  </script>
+</body>
 </html>
